--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Scorepad",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Scorepad: The simple score keeper.",
   "dependencies": {
     "async": "^0.9.0",
@@ -15,5 +15,9 @@
     "bower": "^1.3.3",
     "gulp-util": "^2.2.14",
     "shelljs": "^0.3.0"
-  }
+  },
+  "cordovaPlugins": [],
+  "cordovaPlatforms": [
+    "ios"
+  ]
 }
