--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
-  "name": "Scorepad",
-  "version": "1.1.0",
+  "name": "scorepad",
+  "version": "1.1.3",
   "homepage": "https://github.com/joshvickerson/scorepad",
   "authors": [
     "Josh Vickerson <josh@joshvickerson.com>"
@@ -18,6 +18,6 @@
     "ngCordova": "~0.1.17-alpha"
   },
   "devDependencies": {
-    "ionic": "driftyco/ionic-bower#1.0.0"
+    "ionic": "driftyco/ionic-bower#1.1.0"
   }
 }
