--- a/bower.json
+++ b/bower.json
@@ -1,11 +1,6 @@
 {
-<<<<<<< HEAD
   "name": "scorepad",
   "version": "1.1.3",
-=======
-  "name": "Scorepad",
-  "version": "1.1.2",
->>>>>>> origin/dev
   "homepage": "https://github.com/joshvickerson/scorepad",
   "authors": [
     "Josh Vickerson <josh@joshvickerson.com>"
@@ -23,10 +18,11 @@
     "ngCordova": "~0.1.17-alpha"
   },
   "devDependencies": {
-<<<<<<< HEAD
     "ionic": "driftyco/ionic-bower#1.1.0"
-=======
-    "ionic": "driftyco/ionic-bower#1.0.1"
->>>>>>> origin/dev
+  },
+  "resolutions": {
+    "angular-sanitize": "1.4.3",
+    "angular-animate": "1.4.3",
+    "angular": "~1.4.6"
   }
 }
