--- a/www/lib/ionic/bower.json
+++ b/www/lib/ionic/bower.json
@@ -29,9 +29,9 @@
   "license": "MIT",
   "private": false,
   "dependencies": {
-    "angular": "1.4.3",
-    "angular-animate": "1.4.3",
-    "angular-sanitize": "1.4.3",
+    "angular": "~1.4.3",
+    "angular-animate": "~1.4.3",
+    "angular-sanitize": "~1.4.3",
     "angular-ui-router": "0.2.13"
   }
 }
