--- a/bower.json
+++ b/bower.json
@@ -18,11 +18,6 @@
     "ngCordova": "~0.1.17-alpha"
   },
   "devDependencies": {
-    "ionic": "driftyco/ionic-bower#1.1.0"
-  },
-  "resolutions": {
-    "angular-sanitize": "1.4.3",
-    "angular-animate": "1.4.3",
-    "angular": "~1.4.6"
+    "ionic": "driftyco/ionic-bower#1.2.1-nightly-1867"
   }
 }
